# Computational-Chemistry

./: README.md
basic-probability/src/chem/: __init__.py  make_plots.py  script3.py  script4.py
bayes-rule/: .gitignore  pyproject.toml
bayes-rule/src/chem/: scrip5.py
eigenvectors-and-the-svd/: pyproject.toml
eigenvectors-and-the-svd/src/chem/: __init__.py  make_plots.py  script2.py  utils.py
ising-model-and-gibbs-sampling/: pyproject.toml
ising-model-and-gibbs-sampling/src/: plot_ising_trajectory.py
ising-model-and-gibbs-sampling/src/chem/: __init__.py  script6.py
least-squares/: pyproject.toml
least-squares/src/chem/: __init__.py  make_plots.py  script3.py
mcmc/examples/: rosenbrock.ipynb
mcmc/src/chem/: rosenbrock.py  script7.py  velocity_verlet.py
ode-integration/examples/: harmonic_oscillator.ipynb
ode-integration/src/chem/: script8.py  utils.py
pde-solvers/: .gitignore
pde-solvers/examples/: diffusion_example.ipynb
pde-solvers/src/chem/: script9.py
simple_nn_in_JaX-main/: README.md  basic_nn.py
vectors-and-matrices/: make_plots.py  script1.py
