[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
   { name = "Zuoming Wang", email = "zw765@cornell.edu"},
]
name = "eigenvectors-and-the-svd"
version = "0.0.1"
dependencies = [
   "numpy",
   "matplotlib",
   "pytest",
   "scipy",
   "scikit-image",
]
